--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="todo7">TODO</string>
     <string name="todo8">TODO</string>
     <string name="gallery">Gallery</string>
+    <string name="slider">slider\n</string>
 </resources>
